--- a/_gh_pages/index.html
+++ b/_gh_pages/index.html
@@ -19,6 +19,7 @@
 
 <!-- Documentation extras -->
 <link href="/assets/css/sub.css" rel="stylesheet">
+<link href="/assets/css/home.css" rel="stylesheet">
 <link href="/assets/css/pygments-manni.css" rel="stylesheet">
 
 
@@ -70,19 +71,6 @@
       <a href="./docs/" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Docs', 'View docs']);">View docs</a>
     </p>
 
-<div class="row">
-  <div class="col col-lg-3 col-offset-3">
-    <a href="./sub/" class="thumbnail text-center">
-    <h1>ACT</h1>
-  </a>
-  </div>
-  <div class="col col-lg-3">
-    <a href="./sub/" class="thumbnail text-center">
-    <h1>SAT</h1>
-  </a>
-  </div>
-</div>
-
 <!--
     <div class="sub-social">
       <ul class="sub-social-buttons">
@@ -120,6 +108,60 @@
 -->
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+      <img src="http://placehold.it/270x200" />
+      <h1>ACT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+  </div>
+</div>
+
 
 
     <!-- JS and analytics only. -->
