--- a/_gh_pages/sub/index.html
+++ b/_gh_pages/sub/index.html
@@ -19,6 +19,7 @@
 
 <!-- Documentation extras -->
 <link href="/assets/css/sub.css" rel="stylesheet">
+<link href="/assets/css/home.css" rel="stylesheet">
 <link href="/assets/css/pygments-manni.css" rel="stylesheet">
 
 
@@ -296,78 +297,93 @@
     <div class="row">
       <div class="col col-lg-3">
         <a href="/sat/integers/" class="thumbnail" >
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Integers</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Number Lines</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Arithmetic Word Problems</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Elementary Number Theory</h3>
           <h4 class="text-center">Factors, Multiples, Primes</h4>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Remainders</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
-          <h3 class="text-center">Exponents & Roots</h3>
+          <img src="http://placehold.it/280x200" />
+          <h3 class="text-center">Exponents &amp; Roots</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Fractions</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Decimals</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Ratios</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Proportions</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Percents</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Sequences</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Sets</h3>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Counting Problems</h3>
           <h4 class="text-center">Fundamental Counting Principle, Combinations, Permutations</h4>
         </a>
       </div>
       <div class="col col-lg-3">
         <a href="#" class="thumbnail">
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Logical Reasoning</h3>
         </a>
       </div>
