--- a/_gh_pages/sat/integers/index.html
+++ b/_gh_pages/sat/integers/index.html
@@ -19,6 +19,7 @@
 
 <!-- Documentation extras -->
 <link href="/assets/css/sub.css" rel="stylesheet">
+<link href="/assets/css/home.css" rel="stylesheet">
 <link href="/assets/css/pygments-manni.css" rel="stylesheet">
 
 
@@ -58,38 +59,6 @@
     <!-- Navbar -->
     <!-- Navbar
 ================================================== -->
-<div class="navbar navbar-inverse navbar-fixed-left">
-  <div class="container">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/">B</a>
-    <div class="nav-collapse collapse">
-      <ul class="nav">
-<!--         <li >
-          <a href="/"><span class="glyphicon glyphicon-home"></span></a>
-        </li>
- -->        <li >
-          <a href="/getting-started" data-toggle="tooltip" data-placement="right" title="Getting started"><span class="glyphicon glyphicon-list"></span></a>
-        </li>
-        <li >
-          <a href="/css" data-toggle="tooltip" data-placement="right" title="CSS"><span class="glyphicon glyphicon-tint"></span></a>
-        </li>
-        <li >
-          <a href="/components" data-toggle="tooltip" data-placement="right" title="Components"><span class="glyphicon glyphicon-fire"></span></a>
-        </li>
-        <li >
-          <a href="/javascript" data-toggle="tooltip" data-placement="right" title="JavaScript plugins"><span class="glyphicon glyphicon-dashboard"></span></a>
-        </li>
-        <li >
-          <a href="/customize" data-toggle="tooltip" data-placement="right" title="Customize"><span class="glyphicon glyphicon-cog"></span></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
 
 <div class="navbar navbar-inverse navbar-fixed-left">
   <div class="row">
@@ -98,15 +67,19 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">B</a>
+    <a class="navbar-brand" href="/">Thatisaweso.me</a>
     <div class="nav-collapse collapse">
       <ul class="nav">
 <!--         <li >
           <a href="/"><span class="glyphicon glyphicon-home"></span></a>
         </li>
- -->        <li class="col-col-lg-3"> <a href=".../sub/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span>Back</button></a>
+        
+ -->    
+        <li><span class="divider-vertical"></span></li>
+        <li> <a href="/sub/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
+        <li><span class="divider-vertical"></span></li>
         </li>
-        <li class="col-col-lg-3"><h1>integers</h1></li>
+        <li><h3>Integers</h3></li>
         </li>
       </ul>
     </div>
@@ -116,28 +89,25 @@
 
     <!-- Page content of course! -->
     <div class="col col-lg-12">
-<div class="row">
-<div class="col col-lg-2"><a href=".../sub/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span>Back</button></a></div>
-<div class="col col-lg-4"><h1>integers</h1></div>
-</div>
+
 
 	<ul class="nav nav-pills nav-justified">
-	    <li class="active"><a href="#learn" class="thumbnail" data-toggle="pill"><h1>Learn</h1></a></li>
-	    <li><a href="#practice" class="thumbnail" data-toggle="pill"><h1>Practice</h1></a></li>
-	    <li><a href="#explore" class="thumbnail" data-toggle="pill"><h1>Explore</h1></a></li>    
+	    <li class="active"><a href="#learn" class="thumbnail" data-toggle="pill"><h1>Learn</h1></a></li><li>
+	      <a href="#practice" class="thumbnail" data-toggle="pill"><h1>Practice</h1></a></li><li>
+	        <a href="#explore" class="thumbnail" data-toggle="pill"><h1>Explore</h1></a></li>    
 	</ul>
 	<ul class="tab-content bar2">
 	    <li class="tab-pane active" id="learn">
 	        <ul class="nav nav-pills">
-	            <li class="active"><a href="#learn-1" class="thumbnail text-center" data-toggle="pill"><h4>$$x^2$$</h4>Learn 1</a></li>
-	            <li><a href="#learn-2" class="thumbnail text-center" data-toggle="pill"><?xml version="1.0"?>
-<svg width="120" height="120"
-     viewPort="0 0 120 120" version="1.1"
-     xmlns="http://www.w3.org/2000/svg" class="svg">
+	            <li class="active col-lg-3"><a href="#learn-1" class="thumbnail text-center" data-toggle="pill"><h4>$$x^2$$</h4>Learn 1</a></li>
+	            <li class="col-lg-3"><a href="#learn-2" class="thumbnail text-center" data-toggle="pill"><?xml version="1.0"?>
+                  <svg width="120" height="120"
+                       viewPort="0 0 120 120" version="1.1"
+                       xmlns="http://www.w3.org/2000/svg" class="svg">
  
-    <circle cx="60" cy="60" r="50"/>
+                    <circle cx="60" cy="60" r="50" />
  
-</svg>Learn 2</a></li>
+              </svg>Learn 2</a></li>
 	        </ul>
 	       	<ul class="tab-content">
 	            <li class="tab-pane active lesson-space" id="learn-1">
@@ -150,9 +120,9 @@
 	    </li>
 
 	    <li class="tab-pane" id="practice">
-	        <ul class="nav nav-pills thumbnail">
-	            <li class="active"><a href="#practice-1" data-toggle="pill">Practice 1</a></li>
-	            <li><a href="#practice-2" data-toggle="pill">Practice 2</a></li>
+	        <ul class="nav nav-pills">
+	            <li class="active col-lg-3"><a href="#practice-1" class="thumbnail text-center" data-toggle="pill">Practice 1</a></li>
+	            <li class="col-lg-3"><a href="#practice-2" class="thumbnail text-center" data-toggle="pill">Practice 2</a></li>
 	        </ul>
 	        <ul class="tab-content">
 	            <li class="tab-pane active" id="practice-1">
@@ -165,8 +135,8 @@
 	    </li>
 	    <li class="tab-pane" id="explore">
 	        <ul class="nav nav-pills">
-	            <li class="active"><a href="#explore-1" data-toggle="pill">Explore 1</a></li>
-	            <li><a href="#explore-2" data-toggle="pill">Explore 2</a></li>
+	            <li class="active col-lg-3"><a href="#explore-1" class="thumbnail text-center" data-toggle="pill">Explore 1</a></li>
+	            <li class="col-lg-3"><a href="#explore-2" data-toggle="pill" class="thumbnail text-center">Explore 2</a></li>
 	        </ul>
 	        <ul class="tab-content">
 	            <li class="tab-pane active text-center" id="explore-1">
@@ -180,6 +150,7 @@
 	</ul>
 
 	</div>
+
 
     <!-- JS and analytics only. -->
     <script> 
