--- a/_gh_pages/tests/sat-math/arithmetic-wordproblems/index.html
+++ b/_gh_pages/tests/sat-math/arithmetic-wordproblems/index.html
@@ -9,7 +9,7 @@
 
 <title>
   
-    lesson &middot; Bootstrap
+    tia &middot; Airthmetic Word Problems
   
 </title>
 
@@ -20,7 +20,7 @@
 <!-- Documentation extras -->
 <link href="/assets/css/sub.css" rel="stylesheet">
 <link href="/assets/css/home.css" rel="stylesheet">
-<link href="/assets/css/pygments-manni.css" rel="stylesheet">
+<!--<link href="/assets/css/pygments-manni.css" rel="stylesheet">-->
 
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -54,32 +54,27 @@
 
     <!-- Place anything custom after this. -->
   </head>
-  <body class="sub-lesson">
+  <body class="lesson">
 
     <!-- Navbar -->
     <!-- Navbar
 ================================================== -->
 
-<div class="navbar navbar-inverse navbar-fixed-left">
+<div class="navbar navbar-fixed-left">
   <div class="row">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Thatisaweso.me</a>
     <div class="nav-collapse collapse">
-      <ul class="nav">
-<!--         <li >
-          <a href="/"><span class="glyphicon glyphicon-home"></span></a>
-        </li>
-        
- -->    
+      <ul class="nav">  
+        <li> <a href="/tests/sat/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
         <li><span class="divider-vertical"></span></li>
-        <li> <a href="/sub/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
+        <li><a class="navbar-brand" href="/">Thatisaweso.me</a></li>
         <li><span class="divider-vertical"></span></li>
         </li>
-        <li><h3>Integers</h3></li>
+        <li><h3>Post Name of Page</h3></li>
         </li>
       </ul>
     </div>
@@ -92,31 +87,38 @@
 
 
 	<ul class="nav nav-pills nav-justified">
-	    <li class="active"><a href="#learn" class="thumbnail" data-toggle="pill"><h1>Learn</h1></a></li><li>
-	      <a href="#practice" class="thumbnail" data-toggle="pill"><h1>Practice</h1></a></li><li>
-	        <a href="#explore" class="thumbnail" data-toggle="pill"><h1>Explore</h1></a></li>    
+	  <li class="active">
+	  	<a href="#learn" class="thumbnail" data-toggle="pill"><h1>Learn</h1></a>
+	  </li>
+	  <li>
+	    <a href="#practice" class="thumbnail" data-toggle="pill"><h1>Practice</h1></a>
+	  </li>
+	  <li>
+	      <a href="#explore" class="thumbnail" data-toggle="pill"><h1>Explore</h1></a>
+	  </li>    
 	</ul>
-	<ul class="tab-content bar2">
-	    <li class="tab-pane active" id="learn">
-	        <ul class="nav nav-pills">
-	            <li class="active col-lg-3"><a href="#learn-1" class="thumbnail text-center" data-toggle="pill"><h4>$$x^2$$</h4>Learn 1</a></li>
-	            <li class="col-lg-3"><a href="#learn-2" class="thumbnail text-center" data-toggle="pill"><?xml version="1.0"?>
-                  <svg width="120" height="120"
-                       viewPort="0 0 120 120" version="1.1"
-                       xmlns="http://www.w3.org/2000/svg" class="svg">
- 
-                    <circle cx="60" cy="60" r="50" />
- 
-              </svg>Learn 2</a></li>
-	        </ul>
-	       	<ul class="tab-content">
-	            <li class="tab-pane active lesson-space" id="learn-1">
-	                <p>Learn 1 Content</p>
-	            </li>
-	            <li class="tab-pane" id="learn-2">
-	                <p>Learn 2 Content</p>
-	            </li>
-	        </ul>
+
+	<ul class="tab-content">
+	  <li class="tab-pane active" id="learn">
+	    <ul class="nav nav-pills">
+	      <li class="active col-lg-3">
+	      	<a href="#learn-1" class="thumbnail text-center" data-toggle="pill">
+	      		<h4>Definition</h4></a>
+	      </li>
+	      <li class="col-lg-3">
+	      	<a href="#learn-2" class="thumbnail text-center" data-toggle="pill">
+	      		<h4>Trick</h4></a>
+	      </li>	      
+			</ul>
+
+	    	<ul class="tab-content">
+          <li class="tab-pane active lesson-space" id="learn-1">
+              <p>Definition</p>
+          </li>
+          <li class="tab-pane" id="learn-2">
+              <p>Trick</p>
+          </li>          
+	      </ul>      
 	    </li>
 
 	    <li class="tab-pane" id="practice">
