--- a/_gh_pages/tests/sat-math/integers/index.html
+++ b/_gh_pages/tests/sat-math/integers/index.html
@@ -9,7 +9,7 @@
 
 <title>
   
-    tia &middot; Home
+    tia &middot; Integers
   
 </title>
 
@@ -54,139 +54,119 @@
 
     <!-- Place anything custom after this. -->
   </head>
-  <body class="sub-home" data-spy="scroll" data-target=".navbar-fixed-top">
+  <body class="lesson">
 
+    <!-- Navbar -->
+    <!-- Navbar
+================================================== -->
 
-    <!-- Fixed Navbar nav include sub-fixed-navbar.html -->
-
-
-    <!-- Page content of course! -->
-    <div class="jumbotron">
-  <div class="container">
-
-    <h1>thatisaweso.me</h1>
-    <p class="lead">The world's first truly digital textbook for faster and easier learning.</p>
-    <div class="row col col-lg-12">
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">about</h3></a>
-      </div>
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">subjects</h3></a>
-      </div>
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">tags</h3></a>
-      </div>
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">search</h3></a>
-      </div>
-    </div>
-
-  </div>
-
-<!--  
-      <a href="assets/bootstrap.zip" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Download', 'Download 3.0.0']);">Download Bootstrap</a>
-      <a href="./docs/" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Docs', 'View docs']);">View docs</a>
-    </p>
-
-
-    <div class="sub-social">
-      <ul class="sub-social-buttons">
-        <li>
-          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+<div class="navbar navbar-fixed-left">
+  <div class="row">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <div class="nav-collapse collapse">
+      <ul class="nav">  
+        <li> <a href="/tests/sat/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
+        <li><span class="divider-vertical"></span></li>
+        <li><a class="navbar-brand" href="/">Thatisaweso.me</a></li>
+        <li><span class="divider-vertical"></span></li>
         </li>
-        <li>
-          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
-        </li>
-        <li class="follow-btn">
-          <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
-        </li>
-        <li class="tweet-btn">
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twitter.github.com/bootstrap/" data-count="horizontal" data-via="twbootstrap" data-related="mdo:Creator of Twitter Bootstrap">Tweet</a>
+        <li><h3>Post Name of Page</h3></li>
         </li>
       </ul>
     </div>
-
-    <ul class="masthead-links">
-      <li>
-        <a href="./customize/" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'Customize']);">Customize</a>
-      </li>
-      <li>
-        <a href="http://github.com/twitter/bootstrap" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'GitHub project']);">GitHub project</a>
-      </li>
-      <li>
-        <a href="./docs/#examples" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'Examples']);">Examples</a>
-      </li>
-      <li>
-        <a href="http://expo.getbootstrap.com" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'Expo']);">Bootstrap Expo</a>
-      </li>
-      <li>Version 3.0.0</li>
-    </ul>
-
--->
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="url(#backGrad)"/></rect>
-            <text x="50%" y="50%" font-size="55" fill="#4fb" > SAT </text>
-          </g>
-        </svg>
-      </a>
-    </div>
-    <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="#e91c21"/></rect>
-            <text x="25%" y="95%" font-size="100" fill="#fff" opacity="1.0">ACT</text>
-          </g>
-        </svg>
-      </a>
-    </div>
-    <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="#09f"/></rect>
-            <text x="25%" y="95%" font-size="100" fill="#fff" opacity="1.0">SAT</text>
-          </g>
-        </svg>
-      </a>
-    </div>
-    <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="url(#backGrad)"/></rect>
-            <text x="50%" y="50%" font-size="55" fill="#4fb" > SAT </text>
-          </g>
-        </svg>
-      </a>
-    </div>
-    <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="url(#backGrad)"/></rect>
-            <text x="50%" y="50%" font-size="55" fill="#4fb" > SAT </text>
-          </g>
-        </svg>
-      </a>
-    </div>
-    <div class="col col-lg-3">
-      <a href="./sub/" class="thumbnail text-center">
-        <img src="http://placehold.it/270x200" />
-        <h1>SAT</h1>
-      </a>
-    </div>
-  </div>
-</div>
 
+    <!-- Page content of course! -->
+    <div class="col col-lg-12">
+
+	<ul class="nav nav-pills nav-justified">
+	  <li class="active">
+	  	<a href="#learn" class="" data-toggle="pill"><h1>Learn</h1></a>
+	  </li>
+	  <li>
+	    <a href="#practice" class="" data-toggle="pill"><h1>Practice</h1></a>
+	  </li>
+	  <li>
+	      <a href="#explore" class="" data-toggle="pill"><h1>Explore</h1></a>
+	  </li> 	  
+	  <li>
+	      <a href="#explore" class="" data-toggle="pill"><h1>Ask</h1></a>
+	  </li>    
+	</ul>
+
+	<ul class="tab-content">
+	  <li class="tab-pane active" id="learn">
+	    <ul class="nav nav-pills">
+	      <li class="active">
+	      	<a href="#learn-1" class=" text-center" data-toggle="pill">
+	      		Definition</a>
+	      </li>
+	      <li class="">
+	      	<a href="#learn-2" class=" text-center" data-toggle="pill">
+	      		Positive | Negative</a>
+	      </li>	      
+	      <li class="">
+	      	<a href="#learn-3" class=" text-center" data-toggle="pill">
+	      		Even | Odd</a>
+	      </li>
+			</ul>
+
+	    	<ul class="tab-content">
+          <li class="tab-pane active lesson-space" id="learn-1">
+              <p>Definition</p>
+              <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="100%" width="100%">
+            <circle width="100%" height="100%" cx="50%" cy="50%" r="100" fill="black"/></circle>
+          </svg>
+          </li>
+          <li class="tab-pane" id="learn-2">
+              <p>Positive | Negative</p>
+          </li>          
+          <li class="tab-pane" id="learn-3">
+              <p>Even | Odd</p>
+          </li>
+	      </ul>      
+	    </li>
+
+	    <li class="tab-pane" id="practice">
+	        <ul class="nav nav-pills">
+	            <li class="active"><a href="#practice-1" class="thumbnail text-center" data-toggle="pill">Practice 1</a></li>
+	            <li class=""><a href="#practice-2" class="thumbnail text-center" data-toggle="pill">Practice 2</a></li>
+	        </ul>
+	        <ul class="tab-content">
+	            <li class="tab-pane active" id="practice-1">
+	                <p>Practice 1 Content</p>
+	            </li>
+	            <li class="tab-pane" id="practice-2">
+	                <p>Practice 2 Content</p>
+	            </li>	            
+	            <li class="tab-pane" id="practice-2">
+	                <p>Practice 2 Content</p>
+	            </li>
+	        </ul>
+	    </li>
+	    <li class="tab-pane" id="explore">
+	        <ul class="nav nav-pills">
+	            <li class="active"><a href="#explore-1" class="thumbnail text-center" data-toggle="pill">Explore 1</a></li>
+	            <li class=""><a href="#explore-2" data-toggle="pill" class="thumbnail text-center">Explore 2</a></li>
+	        </ul>
+	        <ul class="tab-content">
+	            <li class="tab-pane active text-center" id="explore-1">
+	                <p>Explore 1 Content</p>
+	            </li>
+	            <li class="tab-pane" id="explore-2">
+	                <p>Explore 2 Content</p>
+	            </li>
+	        </ul>
+	    </li>
+	</ul>
+
+	</div>
 
 
     <!-- JS and analytics only. -->
