--- a/_gh_pages/home/index.html
+++ b/_gh_pages/home/index.html
@@ -9,7 +9,7 @@
 
 <title>
   
-    tia &middot; Number Lines
+    Home &middot; Bootstrap
   
 </title>
 
@@ -18,9 +18,8 @@
 
 
 <!-- Documentation extras -->
-<link href="/assets/css/sub.css" rel="stylesheet">
-<link href="/assets/css/home.css" rel="stylesheet">
-<!--<link href="/assets/css/pygments-manni.css" rel="stylesheet">-->
+<link href="/assets/css/docs.css" rel="stylesheet">
+<link href="/assets/css/pygments-manni.css" rel="stylesheet">
 
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -54,104 +53,55 @@
 
     <!-- Place anything custom after this. -->
   </head>
-  <body class="lesson">
+  <body class="bs-docs-home">
 
-    <!-- Navbar -->
-    <!-- Navbar
-================================================== -->
+    <!-- Page content of course! -->
+    <div class="bs-docs-jumbotron masthead">
+  <div class="container">
 
-<div class="navbar navbar-fixed-left">
-  <div class="row">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <div class="nav-collapse collapse">
-      <ul class="nav">  
-        <li> <a href="/tests/sat/"><i class="glyphicon glyphicon-chevron-left"></i> Back</a>
-        <li><span class="divider-vertical"></span></li>
-        <li><a class="navbar-brand" href="/">Thatisaweso.me</a></li>
-        <li><span class="divider-vertical"></span></li>
+    <h1>Home</h1>
+    <p class="lead">Sleek, intuitive, and powerful mobile-first front-end framework for faster and easier web development.</p>
+    <p>
+      <a href="assets/bootstrap.zip" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Download', 'Download 3.0.0']);">Download Bootstrap</a>
+      <a href="./docs/" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Docs', 'View docs']);">View docs</a>
+      <a href="./sub/" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Docs', 'View docs']);">SUB</a>
+    </p>
+
+    <div class="bs-docs-social">
+      <ul class="bs-docs-social-buttons">
+        <li>
+          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
         </li>
-        <li><h3>Post Name of Page</h3></li>
+        <li>
+          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+        </li>
+        <li class="follow-btn">
+          <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
+        </li>
+        <li class="tweet-btn">
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twitter.github.com/bootstrap/" data-count="horizontal" data-via="twbootstrap" data-related="mdo:Creator of Twitter Bootstrap">Tweet</a>
         </li>
       </ul>
     </div>
+
+    <ul class="masthead-links">
+      <li>
+        <a href="./customize/" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'Customize']);">Customize</a>
+      </li>
+      <li>
+        <a href="http://github.com/twitter/bootstrap" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'GitHub project']);">GitHub project</a>
+      </li>
+      <li>
+        <a href="./docs/#examples" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'Examples']);">Examples</a>
+      </li>
+      <li>
+        <a href="http://expo.getbootstrap.com" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'Expo']);">Bootstrap Expo</a>
+      </li>
+      <li>Version 3.0.0</li>
+    </ul>
+
   </div>
 </div>
-
-
-    <!-- Page content of course! -->
-    <div class="col col-lg-12">
-
-
-	<ul class="nav nav-pills nav-justified">
-	  <li class="active">
-	  	<a href="#learn" class="thumbnail" data-toggle="pill"><h1>Learn</h1></a>
-	  </li>
-	  <li>
-	    <a href="#practice" class="thumbnail" data-toggle="pill"><h1>Practice</h1></a>
-	  </li>
-	  <li>
-	      <a href="#explore" class="thumbnail" data-toggle="pill"><h1>Explore</h1></a>
-	  </li>    
-	</ul>
-
-	<ul class="tab-content">
-	  <li class="tab-pane active" id="learn">
-	    <ul class="nav nav-pills">
-	      <li class="active col-lg-3">
-	      	<a href="#learn-1" class="thumbnail text-center" data-toggle="pill">
-	      		<h4>Definition</h4></a>
-	      </li>
-	      <li class="col-lg-3">
-	      	<a href="#learn-2" class="thumbnail text-center" data-toggle="pill">
-	      		<h4>Trick</h4></a>
-	      </li>	      
-			</ul>
-
-	    	<ul class="tab-content">
-          <li class="tab-pane active lesson-space" id="learn-1">
-              <p>Definition</p>
-          </li>
-          <li class="tab-pane" id="learn-2">
-              <p>Trick</p>
-          </li>          
-	      </ul>      
-	    </li>
-
-	    <li class="tab-pane" id="practice">
-	        <ul class="nav nav-pills">
-	            <li class="active col-lg-3"><a href="#practice-1" class="thumbnail text-center" data-toggle="pill">Practice 1</a></li>
-	            <li class="col-lg-3"><a href="#practice-2" class="thumbnail text-center" data-toggle="pill">Practice 2</a></li>
-	        </ul>
-	        <ul class="tab-content">
-	            <li class="tab-pane active" id="practice-1">
-	                <p>Practice 1 Content</p>
-	            </li>
-	            <li class="tab-pane" id="practice-2">
-	                <p>Practice 2 Content</p>
-	            </li>
-	        </ul>
-	    </li>
-	    <li class="tab-pane" id="explore">
-	        <ul class="nav nav-pills">
-	            <li class="active col-lg-3"><a href="#explore-1" class="thumbnail text-center" data-toggle="pill">Explore 1</a></li>
-	            <li class="col-lg-3"><a href="#explore-2" data-toggle="pill" class="thumbnail text-center">Explore 2</a></li>
-	        </ul>
-	        <ul class="tab-content">
-	            <li class="tab-pane active text-center" id="explore-1">
-	                <p>Explore 1 Content</p>
-	            </li>
-	            <li class="tab-pane" id="explore-2">
-	                <p>Explore 2 Content</p>
-	            </li>
-	        </ul>
-	    </li>
-	</ul>
-
-	</div>
 
 
     <!-- JS and analytics only. -->
