--- a/_gh_pages/sub/index.html
+++ b/_gh_pages/sub/index.html
@@ -9,7 +9,7 @@
 
 <title>
   
-    tia &middot; subject
+    sub &middot; Bootstrap
   
 </title>
 
@@ -20,7 +20,7 @@
 <!-- Documentation extras -->
 <link href="/assets/css/sub.css" rel="stylesheet">
 <link href="/assets/css/home.css" rel="stylesheet">
-<!--<link href="/assets/css/pygments-manni.css" rel="stylesheet">-->
+<link href="/assets/css/pygments-manni.css" rel="stylesheet">
 
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -69,25 +69,25 @@
     <!-- SAT Math -->
     <li><a class="nav-header" href="#sat-math">SAT Math</a></li>
     <li><a href="#sat-math-overview">Overview</a></li>
-    <li><a href="#sat-math-numbers-operations">Numbers & Operations</a></li>
-    <li><a href="#sat-math-algebra-functions">Algebra & Functions</a></li>
-    <li><a href="#sat-math-geometry-measurement">Geometry & Measurement</a></li>
-    <li><a href="#sat-math-data-statistics-probability">Data, Statistics, & Probability</a></li>
+    <li><a href="#numbers-operations">Numbers & Operations</a></li>
+    <li><a href="#algebra-functions">Algebra & Functions</a></li>
+    <li><a href="#geometry-measurement">Geometry & Measurement</a></li>
+    <li><a href="#data-statistics-probability">Data, Statistics, & Probability</a></li>
 
     <!-- SAT Critical Reading -->
     <li><a class="nav-header" href="#sat-reading">SAT Critical Reading</a></li>
     <li><a href="#sat-reading-overview">Overview</a></li>
-    <li><a href="#sat-reading-sentence-completion">Sentence Completion</a></li>
-    <li><a href="#sat-reading-vocabulary">Vocabulary</a></li>
-    <li><a href="#sat-reading-passage-based-reading">Passage-based Reading</a></li>
+    <li><a href="#sentence-completion">Sentence Completion</a></li>
+    <li><a href="#vocabulary">Vocabulary</a></li>
+    <li><a href="#passage-based-reading">Passage-based Reading</a></li>
 
     <!-- SAT Writing -->
     <li><a class="nav-header" href="#sat-writing">SAT Writing</a></li>
     <li><a href="#sat-writing-overview">Overview</a></li>
-    <li><a href="#sat-writing-essay">Essay</a></li>
-    <li><a href="#sat-writing-improving-sentences">Improving Sentences</a></li>
-    <li><a href="#sat-writing-identifying-sentence-errors">Identifying Sentence Errors</a></li>
-    <li><a href="#sat-writing-improving-paragraphs">Improving Paragraphs</a></li>
+    <li><a href="#essay">Essay</a></li>
+    <li><a href="#improving-sentences">Improving Sentences</a></li>
+    <li><a href="#identifying-sentence-errors">Identifying Sentence Errors</a></li>
+    <li><a href="#improving-paragraphs">Improving Paragraphs</a></li>
   </ul>
 </div>
 
@@ -296,15 +296,13 @@
   <div class="panel">
     <div class="row">
       <div class="col col-lg-3">
-        <a href="/sat/integers/" class="thumbnail">
-          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="100">
-            <circle cx="30" cy="30" r="30" fill="red" class="text-center"/>
-          </svg>
+        <a href="/sat/integers/" class="thumbnail" >
+          <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Integers</h3>
         </a>
       </div>
       <div class="col col-lg-3">
-        <a href="/sat/number-lines/" class="thumbnail">
+        <a href="#" class="thumbnail">
           <img src="http://placehold.it/280x200" />
           <h3 class="text-center">Number Lines</h3>
         </a>
@@ -919,6 +917,12 @@
 
     <div class="sub-social">
       <ul class="sub-social-buttons">
+        <li>
+          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+        </li>
+        <li>
+          <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+        </li>
         <li class="follow-btn">
           <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
         </li>
@@ -929,15 +933,15 @@
     </div>
 
 
-    <p>Designed and built with all the love in the world by <a href="http://twitter.com/textreme" target="_blank">@textreme</a>.</p>
-    <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.</p>
-
+    <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
+    <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+    <p><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
     <ul class="footer-links">
-      <li><a href="http://blog.getbootstrap.com">About</a></li>
+      <li><a href="http://blog.getbootstrap.com">Blog</a></li>
       <li class="muted">&middot;</li>
-      <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Terms of Use</a></li>
+      <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Issues</a></li>
       <li class="muted">&middot;</li>
-      <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">Contact</a></li>
+      <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">Changelog</a></li>
     </ul>
   </div>
 </footer>
