--- a/_gh_pages/index.html
+++ b/_gh_pages/index.html
@@ -9,7 +9,7 @@
 
 <title>
   
-    tia &middot; Home
+    Index &middot; Bootstrap
   
 </title>
 
@@ -20,7 +20,7 @@
 <!-- Documentation extras -->
 <link href="/assets/css/sub.css" rel="stylesheet">
 <link href="/assets/css/home.css" rel="stylesheet">
-<!--<link href="/assets/css/pygments-manni.css" rel="stylesheet">-->
+<link href="/assets/css/pygments-manni.css" rel="stylesheet">
 
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -64,31 +64,14 @@
     <div class="jumbotron">
   <div class="container">
 
-    <h1>thatisaweso.me</h1>
+    <h1>1234gogo</h1>
     <p class="lead">The world's first truly digital textbook for faster and easier learning.</p>
-    <div class="row col col-lg-12">
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">about</h3></a>
-      </div>
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">subjects</h3></a>
-      </div>
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">tags</h3></a>
-      </div>
-      <div class="no col col-lg-3">
-        <a href="/#/" class="text-center"><h3 class="linx">search</h3></a>
-      </div>
-    </div>
-
-  </div>
-
-<!--  
+    <p>
       <a href="assets/bootstrap.zip" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Download', 'Download 3.0.0']);">Download Bootstrap</a>
       <a href="./docs/" class="btn btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Docs', 'View docs']);">View docs</a>
     </p>
 
-
+<!--
     <div class="sub-social">
       <ul class="sub-social-buttons">
         <li>
@@ -129,53 +112,45 @@
 <div class="container">
   <div class="row">
     <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="url(#backGrad)"/></rect>
-            <text x="50%" y="50%" font-size="55" fill="#4fb" > SAT </text>
-          </g>
-        </svg>
+      <a href="./sub/" class="thumbnail text-center">
+      <img src="http://placehold.it/270x200" />
+      <h1>ACT</h1>
       </a>
     </div>
     <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="#e91c21"/></rect>
-            <text x="25%" y="95%" font-size="100" fill="#fff" opacity="1.0">ACT</text>
-          </g>
-        </svg>
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
       </a>
     </div>
     <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="#09f"/></rect>
-            <text x="25%" y="95%" font-size="100" fill="#fff" opacity="1.0">SAT</text>
-          </g>
-        </svg>
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
       </a>
     </div>
     <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="url(#backGrad)"/></rect>
-            <text x="50%" y="50%" font-size="55" fill="#4fb" > SAT </text>
-          </g>
-        </svg>
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
       </a>
     </div>
     <div class="col col-lg-3">
-      <a href="/tests/sat/" class="thumbnail text-center">
-        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="270px" width="100%">
-          <g>
-            <rect width="100%" height="100%" x="0%" y="0%" fill="url(#backGrad)"/></rect>
-            <text x="50%" y="50%" font-size="55" fill="#4fb" > SAT </text>
-          </g>
-        </svg>
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="./sub/" class="thumbnail text-center">
+        <img src="http://placehold.it/270x200" />
+        <h1>SAT</h1>
       </a>
     </div>
     <div class="col col-lg-3">
